--- a/E-commerce Web App Backend Services/appsettings.json
+++ b/E-commerce Web App Backend Services/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://@cluster0.vobmwvk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "DatabaseName": "E-Commerce",
+    "UserCollectionName": "Users",
+    "ProductCollectionName": "Products"
+  }
 }
