--- a/E-commerce Web App Backend Services/appsettings.json
+++ b/E-commerce Web App Backend Services/appsettings.json
@@ -1,15 +1,14 @@
 {
+  "DatabaseSettings": {
+    "UserCollectionName": "users",
+    "ConnectionString": "mongodb+srv://isuriyapa:isuri%402001@cluster1.zsxaysn.mongodb.net/e-commerce-database?retryWrites=true&w=majority&appName=Cluster1",
+    "DatabaseName": "e-commerce-database"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "MongoDB": {
-    "ConnectionURI": "mongodb+srv://@cluster0.vobmwvk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-    "DatabaseName": "E-Commerce",
-    "UserCollectionName": "Users",
-    "ProductCollectionName": "Products"
-  }
+  "AllowedHosts": "*"
 }
