Added User Authentication

--- a/E-commerce Web App Backend Services/appsettings.json
+++ b/E-commerce Web App Backend Services/appsettings.json
@@ -1,5 +1,12 @@
 {
+  "JwtSettings": {
+    "Secret": "your_super_secret_key",
+    "Issuer": "http://localhost:7237",
+    "Audience": "https://yourdomain.com",
+    "ExpirationMinutes": 60
+  },
   "DatabaseSettings": {
+    "ProductCollectionName": "products",
     "UserCollectionName": "users",
     "ConnectionString": "mongodb+srv://isuriyapa:isuri%402001@cluster1.zsxaysn.mongodb.net/e-commerce-database?retryWrites=true&w=majority&appName=Cluster1",
     "DatabaseName": "e-commerce-database"
@@ -9,6 +16,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+
   },
   "AllowedHosts": "*"
 }
