Customer Orders: Create new Order

--- a/E-commerce Web App Backend Services/appsettings.json
+++ b/E-commerce Web App Backend Services/appsettings.json
@@ -6,6 +6,7 @@
     "ExpirationMinutes": 60
   },
   "DatabaseSettings": {
+    "OrdersCollectionName": "orders",
     "ProductCollectionName": "products",
     "UserCollectionName": "users",
     "ConnectionString": "mongodb+srv://isuriyapa:isuri%402001@cluster1.zsxaysn.mongodb.net/e-commerce-database?retryWrites=true&w=majority&appName=Cluster1",
