Updated appsettings.json file

--- a/E-commerce Web App Backend Services/appsettings.json
+++ b/E-commerce Web App Backend Services/appsettings.json
@@ -9,6 +9,7 @@
     "OrdersCollectionName": "orders",
     "ProductCollectionName": "products",
     "InventoryCollectionName": "inventory",
+    "NotificationCollectionName": "notifications",
     "UserCollectionName": "users",
     "ConnectionString": "mongodb+srv://isuriyapa:isuri%402001@cluster1.zsxaysn.mongodb.net/e-commerce-database?retryWrites=true&w=majority&appName=Cluster1",
     "DatabaseName": "e-commerce-database"
@@ -18,7 +19,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-
   },
   "AllowedHosts": "*"
 }
