--- a/E-commerce Web App Backend Services/appsettings.json
+++ b/E-commerce Web App Backend Services/appsettings.json
@@ -12,7 +12,7 @@
     "NotificationCollectionName": "notifications",
     "UserCollectionName": "users",
     "VendorRatingCollectionName": "vendorRating",
-    "ConnectionString": "mongodb+srv://root:root@clustor0.kcp2uk6.mongodb.net/e-commerce-database?retryWrites=true&w=majority&appName=clustor0",
+    "ConnectionString": "mongodb+srv://isuriyapa:isuri%402001@cluster1.zsxaysn.mongodb.net/e-commerce-database?retryWrites=true&w=majority&appName=Cluster1",
     "DatabaseName": "e-commerce-database"
   },
   "Logging": {
